--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.CaffeApplicationJava"
         tools:targetApi="31">
         <activity
-            android:name=".OrderDetailActivity"
+            android:name=".mainAppFiles.OrderDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".MakeOrderActivity"
+            android:name=".mainAppFiles.MakeOrderActivity"
             android:exported="false" />
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".mainAppFiles.RegistrationActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
